--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,15 +4,7 @@ layout: default
 
 <!-- about.html -->
       <div class="post">
-        <header class="post-header">
-          <h1 class="post-title">
-            {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
-          </h1>
-          <p class="desc">{{ page.subtitle }}</p>
-        </header>
-
-        <article>
-          {% if page.profile -%}
+        {% if page.profile -%}
           <div class="profile float-{%- if page.profile.align == 'left' -%}left{%- else -%}right{%- endif -%}">
             {%- if page.profile.image %}
               {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
@@ -26,17 +18,42 @@ layout: default
               {% include figure.html
               path=profile_image_path
               class=profile_image_class
-              alt=page.profile.image
-              cache_bust=true -%}
+              alt=page.profile.image -%}
             {% endif -%}
             {%- if page.profile.address %}
             <div class="address">
               {{ page.profile.address }}
             </div>
             {%- endif %}
-          </div>
+            
+           </div>
           {%- endif %}
+        <header class="post-header">
+          <h1 class="post-title">
+           {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
+          </h1>
+          <p class="desc">{{ page.subtitle }}</p>
+          <p class="desc font-weight-bold">School of Engineering and Science <br> Stevens Institute of Technology</p>
+              <br>
+              <br>
+  
+            <!-- Social -->
+            {%- if page.social %}
+                  <div class="social text-left">
+                  <div class="contact-icons">
+                  {% include social.html %}
+                  </div>
 
+                  <div class="contact-note">
+                  {{ site.contact_note }}
+                  </div>
+
+                  </div>
+            {%- endif %}
+        </header>
+
+        <article>
+          
           <div class="clearfix">
             {{ content }}
           </div>
@@ -59,19 +76,6 @@ layout: default
             {%- include selected_papers.html %}
           {%- endif %}
 
-          <!-- Social -->
-          {%- if page.social %}
-            <div class="social">
-              <div class="contact-icons">
-                {% include social.html %}
-              </div>
-
-              <div class="contact-note">
-                {{ site.contact_note }}
-              </div>
-
-            </div>
-          {%- endif %}
         </article>
 
 </div>
